// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`offer templates golden tests > free.base@1.0.0 > produces a stable PDF hash > free.base@1.0.0 pdf sha256 1`] = `"f28ea21527e1451d1d9a1fc0fdbb13b934a17e669961e2619bf75433ebf80adb"`;

exports[`offer templates golden tests > free.base@1.0.0 > produces the expected HTML hash > free.base@1.0.0 html sha256 1`] = `"2553181f1fbb998bf2208ba885e56848df7cc4ac625ae6ab5d1580fffbd791c5"`;

exports[`offer templates golden tests > free.base@1.0.0 > renders stable HTML > free.base@1.0.0 html 1`] = `
"<!DOCTYPE html>
<html lang="hu">
<head>
<meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>AI ajánlatkészítő bevezetése</title>
    <style>
      
  @page {
    size: A4;
    margin: 24mm 16mm;

    @bottom-right {
      content: "Page " counter(page) " of " counter(pages);
      font-family: 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
      font-size: 9pt;
      color: #334155;
    }
  }

  html,
  body {
    height: 100%;
  }

  body {
    margin: 0;
    background: #f8fafc;
    color: #0f172a;
    font: 400 11pt/1.5 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
  }

  p {
    margin: 0 0 1em;
  }

  table,
  th,
  td {
    font-family: 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    font-size: 9.5pt;
    line-height: 1.4;
  }

      
  .offer-doc {
    --brand-primary: #151035;
    --brand-primary-contrast: #ffffff;
    --brand-secondary: #f3f4f6;
    --brand-secondary-border: #d1d5db;
    --brand-secondary-text: #1f2937;
    --brand-muted: #6b7280;
    --brand-text: #1f2937;
    --brand-bg: #ffffff;
    --brand-border: #d1d5db;
    --space-xs: 0.25rem;
    --space-sm: 0.5rem;
    --space-md: 1rem;
    --space-lg: 1.5rem;
    --space-xl: 2.75rem;
    --font-body: 400 0.95rem/1.65 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-h1: 700 1.9rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-h2: 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-h3: 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-table: 600 0.72rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --radius-sm: 0.75rem;
    --radius-md: 1.25rem;
    --radius-lg: 2rem;
    background: var(--brand-bg, #ffffff);
    color: var(--brand-text, #1f2937);
    font: var(--font-body, 400 0.95rem/1.65 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    margin: 0 auto;
    max-width: 760px;
  }
  .offer-doc--modern {
    border: 1px solid var(--brand-border, #d1d5db);
    border-radius: var(--radius-lg, 32px);
    box-shadow: 0 24px 60px rgba(15, 23, 42, 0.08);
    padding: var(--space-xl, 44px);
  }
  .offer-doc--modern .offer-doc__header {
    align-items: flex-end;
    display: flex;
    flex-direction: column;
    gap: var(--space-lg, 0.65rem);
    margin-bottom: var(--space-xl, 2.75rem);
    text-align: right;
  }
  .offer-doc--modern .offer-doc__logo {
    align-self: flex-end;
    border-radius: var(--radius-md, 14px);
    max-height: 72px;
    max-width: 260px;
    object-fit: contain;
  }
  .offer-doc--modern .offer-doc__company {
    color: var(--brand-muted, #6b7280);
    font-size: 0.75rem;
    font-weight: 600;
    letter-spacing: 0.22em;
    text-transform: uppercase;
  }
  .offer-doc--modern .offer-doc__title {
    color: var(--brand-primary);
    font: var(--font-h1, 700 1.9rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    margin: 0;
  }
  .offer-doc__content {
    font-size: 0.95rem;
  }
  .offer-doc__content h1,
  .offer-doc__content h2,
  .offer-doc__content h3,
  .offer-doc__content h4 {
    color: var(--brand-primary);
    margin: 2.2rem 0 0.9rem;
  }
  .offer-doc__content h1 {
    font: var(--font-h2, 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    letter-spacing: -0.125rem;
  }
  .offer-doc__content h2,
  .offer-doc__content h3,
  .offer-doc__content h4 {
    font: var(--font-h3, 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
  }
  .offer-doc__content h1:first-child,
  .offer-doc__content h2:first-child,
  .offer-doc__content h3:first-child {
    margin-top: 0;
  }
  .offer-doc__content p {
    margin: 0 0 1rem;
  }
  .offer-doc__content ul,
  .offer-doc__content ol {
    margin: 0 0 1.2rem 1.4rem;
    padding: 0;
    list-style-position: outside;
  }
  .offer-doc__content ul {
    list-style-type: disc;
  }
  .offer-doc__content ol {
    list-style-type: decimal;
  }
  .offer-doc__content ul ul {
    list-style-type: circle;
  }
  .offer-doc__content ol ol,
  .offer-doc__content ul ol {
    list-style-type: lower-alpha;
  }
  .offer-doc__content li {
    margin-bottom: 0.45rem;
  }
  .offer-doc__compact {
    display: flex;
    flex-direction: column;
    gap: 1.75rem;
  }
  .offer-doc__compact-intro {
    background: var(--brand-secondary);
    border: 1px solid var(--brand-secondary-border);
    border-radius: var(--radius-lg, 24px);
    display: grid;
    gap: 1.4rem;
    padding: var(--space-lg, 1.6rem) var(--space-xl, 1.9rem);
  }
  @media (min-width: 640px) {
    .offer-doc__compact-intro {
      grid-template-columns: repeat(2, minmax(0, 1fr));
    }
  }
  .offer-doc__compact-block h2,
  .offer-doc__compact-block h3 {
    margin-top: 0;
  }
  .offer-doc__compact-block--highlights ul {
    margin-left: 1.2rem;
  }
  .offer-doc__compact-grid {
    display: grid;
    gap: 1.2rem;
  }
  @media (min-width: 720px) {
    .offer-doc__compact-grid {
      grid-template-columns: repeat(3, minmax(0, 1fr));
    }
  }
  .offer-doc__compact-card {
    background: var(--brand-bg, #ffffff);
    border: 1px solid var(--brand-border, #d1d5db);
    border-radius: var(--radius-md, 22px);
    box-shadow: 0 12px 28px rgba(15, 23, 42, 0.08);
    padding: var(--space-lg, 1.5rem) var(--space-xl, 1.7rem);
  }
  .offer-doc__compact-card h3 {
    margin-top: 0;
    margin-bottom: 0.75rem;
  }
  .offer-doc__compact-bottom {
    display: grid;
    gap: 1.2rem;
  }
  @media (min-width: 720px) {
    .offer-doc__compact-bottom {
      grid-template-columns: 1.15fr 0.85fr;
    }
  }
  .offer-doc__compact-card--accent {
    background: var(--brand-primary);
    border-color: transparent;
    color: var(--brand-primary-contrast);
  }
  .offer-doc__compact-card--accent h3 {
    color: inherit;
  }
  .offer-doc__compact-card--accent ul,
  .offer-doc__compact-card--accent li {
    color: inherit;
  }
  .offer-doc__compact-card--closing {
    background: var(--brand-secondary, #f9fafb);
  }
  .offer-doc__table {
    margin-top: 2.5rem;
  }
  .offer-doc__pricing-table {
    border-collapse: collapse;
    font-size: 0.85rem;
    width: 100%;
  }
  .offer-doc__pricing-table thead th {
    background: var(--brand-secondary);
    border-bottom: 1px solid var(--brand-secondary-border);
    color: var(--brand-secondary-text);
    font: var(--font-table, 600 0.72rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    letter-spacing: 0.08em;
    padding: 0.65rem 0.75rem;
    text-transform: uppercase;
  }
  .offer-doc__pricing-table tbody td {
    border-bottom: 1px solid var(--brand-secondary-border);
    color: var(--brand-text, #374151);
    padding: 0.6rem 0.75rem;
    vertical-align: top;
  }
  .offer-doc__pricing-table tbody tr:last-child td {
    border-bottom: 1px solid var(--brand-secondary-border);
  }
  .offer-doc__pricing-table tfoot td {
    font-weight: 600;
    padding: 0.75rem 0.75rem;
  }
  .offer-doc__pricing-table tfoot tr:first-child td {
    border-top: 2px solid var(--brand-primary);
  }
  .offer-doc__pricing-table tfoot tr:last-child td {
    background: var(--brand-primary);
    color: var(--brand-primary-contrast);
  }
  .offer-doc--premium {
    border-radius: 36px;
    box-shadow: 0 32px 70px rgba(15, 23, 42, 0.12);
    overflow: hidden;
  }
  .offer-doc__header--premium {
    background: linear-gradient(135deg, var(--brand-primary), var(--brand-secondary));
    color: var(--brand-primary-contrast);
    padding: 48px 48px 32px;
  }
  .offer-doc__premium-banner {
    align-items: center;
    display: flex;
    gap: 32px;
  }
  .offer-doc__premium-logo-slot {
    align-items: center;
    border-radius: 24px;
    display: flex;
    height: 140px;
    justify-content: center;
    width: 140px;
  }
  .offer-doc__premium-logo-slot--filled {
    background: rgba(255, 255, 255, 0.12);
  }
  .offer-doc__premium-logo-slot--empty {
    background: transparent;
  }
  .offer-doc__logo--premium {
    max-height: 100%;
    max-width: 100%;
    object-fit: contain;
  }
  .offer-doc__premium-text {
    display: flex;
    flex: 1;
    flex-direction: column;
    gap: 0.4rem;
  }
  .offer-doc__company--premium {
    color: rgba(255, 255, 255, 0.82);
    font-size: 0.75rem;
    font-weight: 600;
    letter-spacing: 0.22em;
    text-transform: uppercase;
  }
  .offer-doc__title--premium {
    color: #ffffff;
    font-size: 2.15rem;
    font-weight: 700;
    letter-spacing: -0.125rem;
    margin: 0;
  }
  .offer-doc__premium-body {
    background: #f8fafc;
    padding: 40px 48px 48px;
  }
  .offer-doc__content--card {
    background: #ffffff;
    border: 1px solid var(--brand-secondary-border);
    border-radius: var(--radius-lg, 28px);
    box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
    padding: 32px 36px;
  }
  .offer-doc__table--card {
    background: #ffffff;
    border: 1px solid var(--brand-secondary-border);
    border-radius: var(--radius-lg, 28px);
    box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
    margin-top: 32px;
    overflow: hidden;
  }
  .offer-doc__table--card .offer-doc__pricing-table thead th {
    background: var(--brand-secondary);
  }
  .offer-doc__table--card .offer-doc__pricing-table tfoot tr:first-child td {
    border-top: 3px solid var(--brand-primary);
  }
  .offer-doc__table--card .offer-doc__pricing-table tfoot tr:last-child td {
    background: var(--brand-primary);
    color: var(--brand-primary-contrast);
  }

      .offer-doc {
      --brand-primary: #151035;
      --brand-primary-contrast: #ffffff;
      --brand-secondary: #f3f4f6;
      --brand-secondary-border: #d1d5db;
      --brand-secondary-text: #6b7280;
      --brand-muted: #6b7280;
      --brand-text: #1f2937;
      --brand-bg: #ffffff;
      --brand-border: #d1d5db;
      --space-xs: 0.25rem;
      --space-sm: 0.5rem;
      --space-md: 1rem;
      --space-lg: 1.5rem;
      --space-xl: 2.75rem;
      --font-body: 400 0.95rem/1.65 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
      --font-h1: 700 1.9rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
      --font-h2: 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
      --font-h3: 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
      --font-table: 600 0.72rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
      --radius-sm: 0.75rem;
      --radius-md: 1.25rem;
      --radius-lg: 2rem;
    }
    </style>
</head>
<body>
<main class="offer-template offer-template--modern">
      <article class="offer-doc offer-doc--modern">

        <header class="offer-doc__header">
          <img class="offer-doc__logo" src="https://cdn.example.com/assets/logo.png" alt="Cég logó" />
          <div class="offer-doc__company">Digitális Megoldások Kft.</div>
          <h1 class="offer-doc__title">AI ajánlatkészítő bevezetése</h1>
        </header>
  
        <section class="offer-doc__content">
          <section>
    <h2>Bevezető</h2>
    <p>A projekt célja egy modern, AI-támogatott ajánlatkészítő eszköz bevezetése.</p>
    <p>A megoldás lehetővé teszi a csapat számára, hogy gyorsan reagáljon az ügyféligényekre, miközben megőrzi a márka hangját.</p>
    <h2>Szolgáltatások</h2>
    <ul>
      <li>Kezdeti konzultáció és stratégiaalkotás</li>
      <li>Felhasználói élménykutatás és prototípus készítés</li>
      <li>Bevezetési támogatás és csapat tréning</li>
    </ul>
    <h2>Eredmények</h2>
    <p>Az automatizált folyamat 60%-kal csökkenti az ajánlatok összeállításához szükséges időt.</p>
  </section>
        </section>
  
        <section class="offer-doc__table">
          
    <table class="offer-doc__pricing-table" style="width: 100%; border-collapse: collapse;">
      <colgroup>
        <col style="width: 32%;" />
        <col style="width: 12%;" />
        <col style="width: 12%;" />
        <col style="width: 16%;" />
        <col style="width: 12%;" />
        <col style="width: 16%;" />
      </colgroup>
      <thead>
        <tr style="background-color: #f1f4f8;">
          <th style="text-align: left; padding: 8px 12px;">Tétel</th>
          <th style="text-align: right; padding: 8px 12px;">Mennyiség</th>
          <th style="text-align: left; padding: 8px 12px;">Egység</th>
          <th style="text-align: right; padding: 8px 12px;">Egységár (Ft)</th>
          <th style="text-align: right; padding: 8px 12px;">ÁFA %</th>
          <th style="text-align: right; padding: 8px 12px;">Összesen (nettó)</th>
        </tr>
      </thead>
      <tbody>
        
              <tr style="">
                <td style="padding: 8px 12px; max-width: 280px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" title="Stratégiai workshop">Stratégiai workshop</td>
                <td style="padding: 8px 12px; text-align: right;">2</td>
                <td style="padding: 8px 12px;">nap</td>
                <td style="padding: 8px 12px; text-align: right;">120 000 Ft</td>
                <td style="padding: 8px 12px; text-align: right;">27</td>
                <td style="padding: 8px 12px; text-align: right;">240 000 Ft</td>
              </tr>
            
              <tr style="background-color: #fafbff;">
                <td style="padding: 8px 12px; max-width: 280px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" title="Digitális prototípus">Digitális prototípus</td>
                <td style="padding: 8px 12px; text-align: right;">1</td>
                <td style="padding: 8px 12px;">projekt</td>
                <td style="padding: 8px 12px; text-align: right;">450 000 Ft</td>
                <td style="padding: 8px 12px; text-align: right;">27</td>
                <td style="padding: 8px 12px; text-align: right;">450 000 Ft</td>
              </tr>
            
              <tr style="">
                <td style="padding: 8px 12px; max-width: 280px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" title="Támogatás">Támogatás</td>
                <td style="padding: 8px 12px; text-align: right;">6</td>
                <td style="padding: 8px 12px;">hónap</td>
                <td style="padding: 8px 12px; text-align: right;">75 000 Ft</td>
                <td style="padding: 8px 12px; text-align: right;">27</td>
                <td style="padding: 8px 12px; text-align: right;">450 000 Ft</td>
              </tr>
            
      </tbody>
      <tfoot>
        <tr style="background-color: #e6efff; font-weight: 600;">
          <td style="padding: 10px 12px;" colspan="5">Nettó összesen</td>
          <td style="padding: 10px 12px; text-align: right;">1 140 000 Ft</td>
        </tr>
        <tr style="background-color: #eef3ff; font-weight: 600;">
          <td style="padding: 10px 12px;" colspan="5">ÁFA</td>
          <td style="padding: 10px 12px; text-align: right;">307 800 Ft</td>
        </tr>
        <tr style="background-color: #dbe7ff; font-weight: 700;">
          <td style="padding: 12px 12px;" colspan="5">Bruttó összesen</td>
          <td style="padding: 12px 12px; text-align: right;">1 447 800 Ft</td>
        </tr>
      </tfoot>
    </table>
  
        </section>
  
        <footer class="offer-doc__footer"></footer>
  
      </article>
    </main>
</body>
</html>"
`;

exports[`offer templates golden tests > premium.elegant@1.0.0 > produces a stable PDF hash > premium.elegant@1.0.0 pdf sha256 1`] = `"0dc7dbc1ee72eb5d69d722b52243e4da3b12a58b2fa07619ffbfe6097043ca62"`;

exports[`offer templates golden tests > premium.elegant@1.0.0 > produces the expected HTML hash > premium.elegant@1.0.0 html sha256 1`] = `"57582e12ff3a7ba3c25bc3a8667bd2f75271b1d957823ed0a4b0e3e1afb766d2"`;

exports[`offer templates golden tests > premium.elegant@1.0.0 > renders stable HTML > premium.elegant@1.0.0 html 1`] = `
"<!DOCTYPE html>
<html lang="hu">
<head>
<meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>AI ajánlatkészítő bevezetése</title>
    <style>
      
  @page {
    size: A4;
    margin: 24mm 16mm;

    @bottom-right {
      content: "Page " counter(page) " of " counter(pages);
      font-family: 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
      font-size: 9pt;
      color: #334155;
    }
  }

  html,
  body {
    height: 100%;
  }

  body {
    margin: 0;
    background: #f8fafc;
    color: #0f172a;
    font: 400 11pt/1.5 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
  }

  p {
    margin: 0 0 1em;
  }

  table,
  th,
  td {
    font-family: 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    font-size: 9.5pt;
    line-height: 1.4;
  }

      
  .offer-doc {
    --brand-primary: #151035;
    --brand-primary-contrast: #ffffff;
    --brand-secondary: #f3f4f6;
    --brand-secondary-border: #d1d5db;
    --brand-secondary-text: #1f2937;
    --brand-muted: #6b7280;
    --brand-text: #1f2937;
    --brand-bg: #ffffff;
    --brand-border: #d1d5db;
    --space-xs: 0.25rem;
    --space-sm: 0.5rem;
    --space-md: 1rem;
    --space-lg: 1.5rem;
    --space-xl: 2.75rem;
    --font-body: 400 0.95rem/1.65 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-h1: 700 1.9rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-h2: 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-h3: 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-table: 600 0.72rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --radius-sm: 0.75rem;
    --radius-md: 1.25rem;
    --radius-lg: 2rem;
    background: var(--brand-bg, #ffffff);
    color: var(--brand-text, #1f2937);
    font: var(--font-body, 400 0.95rem/1.65 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    margin: 0 auto;
    max-width: 760px;
  }
  .offer-doc--modern {
    border: 1px solid var(--brand-border, #d1d5db);
    border-radius: var(--radius-lg, 32px);
    box-shadow: 0 24px 60px rgba(15, 23, 42, 0.08);
    padding: var(--space-xl, 44px);
  }
  .offer-doc--modern .offer-doc__header {
    align-items: flex-end;
    display: flex;
    flex-direction: column;
    gap: var(--space-lg, 0.65rem);
    margin-bottom: var(--space-xl, 2.75rem);
    text-align: right;
  }
  .offer-doc--modern .offer-doc__logo {
    align-self: flex-end;
    border-radius: var(--radius-md, 14px);
    max-height: 72px;
    max-width: 260px;
    object-fit: contain;
  }
  .offer-doc--modern .offer-doc__company {
    color: var(--brand-muted, #6b7280);
    font-size: 0.75rem;
    font-weight: 600;
    letter-spacing: 0.22em;
    text-transform: uppercase;
  }
  .offer-doc--modern .offer-doc__title {
    color: var(--brand-primary);
    font: var(--font-h1, 700 1.9rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    margin: 0;
  }
  .offer-doc__content {
    font-size: 0.95rem;
  }
  .offer-doc__content h1,
  .offer-doc__content h2,
  .offer-doc__content h3,
  .offer-doc__content h4 {
    color: var(--brand-primary);
    margin: 2.2rem 0 0.9rem;
  }
  .offer-doc__content h1 {
    font: var(--font-h2, 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    letter-spacing: -0.125rem;
  }
  .offer-doc__content h2,
  .offer-doc__content h3,
  .offer-doc__content h4 {
    font: var(--font-h3, 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
  }
  .offer-doc__content h1:first-child,
  .offer-doc__content h2:first-child,
  .offer-doc__content h3:first-child {
    margin-top: 0;
  }
  .offer-doc__content p {
    margin: 0 0 1rem;
  }
  .offer-doc__content ul,
  .offer-doc__content ol {
    margin: 0 0 1.2rem 1.4rem;
    padding: 0;
    list-style-position: outside;
  }
  .offer-doc__content ul {
    list-style-type: disc;
  }
  .offer-doc__content ol {
    list-style-type: decimal;
  }
  .offer-doc__content ul ul {
    list-style-type: circle;
  }
  .offer-doc__content ol ol,
  .offer-doc__content ul ol {
    list-style-type: lower-alpha;
  }
  .offer-doc__content li {
    margin-bottom: 0.45rem;
  }
  .offer-doc__compact {
    display: flex;
    flex-direction: column;
    gap: 1.75rem;
  }
  .offer-doc__compact-intro {
    background: var(--brand-secondary);
    border: 1px solid var(--brand-secondary-border);
    border-radius: var(--radius-lg, 24px);
    display: grid;
    gap: 1.4rem;
    padding: var(--space-lg, 1.6rem) var(--space-xl, 1.9rem);
  }
  @media (min-width: 640px) {
    .offer-doc__compact-intro {
      grid-template-columns: repeat(2, minmax(0, 1fr));
    }
  }
  .offer-doc__compact-block h2,
  .offer-doc__compact-block h3 {
    margin-top: 0;
  }
  .offer-doc__compact-block--highlights ul {
    margin-left: 1.2rem;
  }
  .offer-doc__compact-grid {
    display: grid;
    gap: 1.2rem;
  }
  @media (min-width: 720px) {
    .offer-doc__compact-grid {
      grid-template-columns: repeat(3, minmax(0, 1fr));
    }
  }
  .offer-doc__compact-card {
    background: var(--brand-bg, #ffffff);
    border: 1px solid var(--brand-border, #d1d5db);
    border-radius: var(--radius-md, 22px);
    box-shadow: 0 12px 28px rgba(15, 23, 42, 0.08);
    padding: var(--space-lg, 1.5rem) var(--space-xl, 1.7rem);
  }
  .offer-doc__compact-card h3 {
    margin-top: 0;
    margin-bottom: 0.75rem;
  }
  .offer-doc__compact-bottom {
    display: grid;
    gap: 1.2rem;
  }
  @media (min-width: 720px) {
    .offer-doc__compact-bottom {
      grid-template-columns: 1.15fr 0.85fr;
    }
  }
  .offer-doc__compact-card--accent {
    background: var(--brand-primary);
    border-color: transparent;
    color: var(--brand-primary-contrast);
  }
  .offer-doc__compact-card--accent h3 {
    color: inherit;
  }
  .offer-doc__compact-card--accent ul,
  .offer-doc__compact-card--accent li {
    color: inherit;
  }
  .offer-doc__compact-card--closing {
    background: var(--brand-secondary, #f9fafb);
  }
  .offer-doc__table {
    margin-top: 2.5rem;
  }
  .offer-doc__pricing-table {
    border-collapse: collapse;
    font-size: 0.85rem;
    width: 100%;
  }
  .offer-doc__pricing-table thead th {
    background: var(--brand-secondary);
    border-bottom: 1px solid var(--brand-secondary-border);
    color: var(--brand-secondary-text);
    font: var(--font-table, 600 0.72rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    letter-spacing: 0.08em;
    padding: 0.65rem 0.75rem;
    text-transform: uppercase;
  }
  .offer-doc__pricing-table tbody td {
    border-bottom: 1px solid var(--brand-secondary-border);
    color: var(--brand-text, #374151);
    padding: 0.6rem 0.75rem;
    vertical-align: top;
  }
  .offer-doc__pricing-table tbody tr:last-child td {
    border-bottom: 1px solid var(--brand-secondary-border);
  }
  .offer-doc__pricing-table tfoot td {
    font-weight: 600;
    padding: 0.75rem 0.75rem;
  }
  .offer-doc__pricing-table tfoot tr:first-child td {
    border-top: 2px solid var(--brand-primary);
  }
  .offer-doc__pricing-table tfoot tr:last-child td {
    background: var(--brand-primary);
    color: var(--brand-primary-contrast);
  }
  .offer-doc--premium {
    border-radius: 36px;
    box-shadow: 0 32px 70px rgba(15, 23, 42, 0.12);
    overflow: hidden;
  }
  .offer-doc__header--premium {
    background: linear-gradient(135deg, var(--brand-primary), var(--brand-secondary));
    color: var(--brand-primary-contrast);
    padding: 48px 48px 32px;
  }
  .offer-doc__premium-banner {
    align-items: center;
    display: flex;
    gap: 32px;
  }
  .offer-doc__premium-logo-slot {
    align-items: center;
    border-radius: 24px;
    display: flex;
    height: 140px;
    justify-content: center;
    width: 140px;
  }
  .offer-doc__premium-logo-slot--filled {
    background: rgba(255, 255, 255, 0.12);
  }
  .offer-doc__premium-logo-slot--empty {
    background: transparent;
  }
  .offer-doc__logo--premium {
    max-height: 100%;
    max-width: 100%;
    object-fit: contain;
  }
  .offer-doc__premium-text {
    display: flex;
    flex: 1;
    flex-direction: column;
    gap: 0.4rem;
  }
  .offer-doc__company--premium {
    color: rgba(255, 255, 255, 0.82);
    font-size: 0.75rem;
    font-weight: 600;
    letter-spacing: 0.22em;
    text-transform: uppercase;
  }
  .offer-doc__title--premium {
    color: #ffffff;
    font-size: 2.15rem;
    font-weight: 700;
    letter-spacing: -0.125rem;
    margin: 0;
  }
  .offer-doc__premium-body {
    background: #f8fafc;
    padding: 40px 48px 48px;
  }
  .offer-doc__content--card {
    background: #ffffff;
    border: 1px solid var(--brand-secondary-border);
    border-radius: var(--radius-lg, 28px);
    box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
    padding: 32px 36px;
  }
  .offer-doc__table--card {
    background: #ffffff;
    border: 1px solid var(--brand-secondary-border);
    border-radius: var(--radius-lg, 28px);
    box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
    margin-top: 32px;
    overflow: hidden;
  }
  .offer-doc__table--card .offer-doc__pricing-table thead th {
    background: var(--brand-secondary);
  }
  .offer-doc__table--card .offer-doc__pricing-table tfoot tr:first-child td {
    border-top: 3px solid var(--brand-primary);
  }
  .offer-doc__table--card .offer-doc__pricing-table tfoot tr:last-child td {
    background: var(--brand-primary);
    color: var(--brand-primary-contrast);
  }

      .offer-doc {
      --brand-primary: #0f172a;
      --brand-primary-contrast: #ffffff;
      --brand-secondary: #e5e7eb;
      --brand-secondary-border: #cbd5f5;
      --brand-secondary-text: #4b5563;
      --brand-muted: #4b5563;
      --brand-text: #111827;
      --brand-bg: #ffffff;
      --brand-border: #cbd5f5;
      --space-xs: 0.35rem;
      --space-sm: 0.65rem;
      --space-md: 1.15rem;
      --space-lg: 1.85rem;
      --space-xl: 3rem;
      --font-body: 400 1rem/1.7 'Poppins', 'Work Sans', 'Segoe UI', sans-serif;
      --font-h1: 700 2.1rem/1.2 'Poppins', 'Work Sans', 'Segoe UI', sans-serif;
      --font-h2: 600 1.35rem/1.3 'Poppins', 'Work Sans', 'Segoe UI', sans-serif;
      --font-h3: 600 1.15rem/1.3 'Poppins', 'Work Sans', 'Segoe UI', sans-serif;
      --font-table: 600 0.78rem/1.2 'Poppins', 'Work Sans', 'Segoe UI', sans-serif;
      --radius-sm: 0.85rem;
      --radius-md: 1.5rem;
      --radius-lg: 2.5rem;
    }
    </style>
</head>
<body>
<main class="offer-template offer-template--premium">
      <article class="offer-doc offer-doc--premium">

        <header class="offer-doc__header offer-doc__header--premium">
          <div class="offer-doc__premium-banner">
            <div class="offer-doc__premium-logo-slot offer-doc__premium-logo-slot--filled"><img class="offer-doc__logo offer-doc__logo--premium" src="https://cdn.example.com/assets/logo.png" alt="Cég logó" /></div>
            <div class="offer-doc__premium-text">
              <div class="offer-doc__company offer-doc__company--premium">Digitális Megoldások Kft.</div>
              <h1 class="offer-doc__title offer-doc__title--premium">AI ajánlatkészítő bevezetése</h1>
            </div>
          </div>
        </header>
          <div class="offer-doc__premium-body">

        <section class="offer-doc__content offer-doc__content--card">
          <section>
    <h2>Bevezető</h2>
    <p>A projekt célja egy modern, AI-támogatott ajánlatkészítő eszköz bevezetése.</p>
    <p>A megoldás lehetővé teszi a csapat számára, hogy gyorsan reagáljon az ügyféligényekre, miközben megőrzi a márka hangját.</p>
    <h2>Szolgáltatások</h2>
    <ul>
      <li>Kezdeti konzultáció és stratégiaalkotás</li>
      <li>Felhasználói élménykutatás és prototípus készítés</li>
      <li>Bevezetési támogatás és csapat tréning</li>
    </ul>
    <h2>Eredmények</h2>
    <p>Az automatizált folyamat 60%-kal csökkenti az ajánlatok összeállításához szükséges időt.</p>
  </section>
        </section>
  
        <section class="offer-doc__table offer-doc__table--card">
          
    <table class="offer-doc__pricing-table" style="width: 100%; border-collapse: collapse;">
      <colgroup>
        <col style="width: 32%;" />
        <col style="width: 12%;" />
        <col style="width: 12%;" />
        <col style="width: 16%;" />
        <col style="width: 12%;" />
        <col style="width: 16%;" />
      </colgroup>
      <thead>
        <tr style="background-color: #f1f4f8;">
          <th style="text-align: left; padding: 8px 12px;">Tétel</th>
          <th style="text-align: right; padding: 8px 12px;">Mennyiség</th>
          <th style="text-align: left; padding: 8px 12px;">Egység</th>
          <th style="text-align: right; padding: 8px 12px;">Egységár (Ft)</th>
          <th style="text-align: right; padding: 8px 12px;">ÁFA %</th>
          <th style="text-align: right; padding: 8px 12px;">Összesen (nettó)</th>
        </tr>
      </thead>
      <tbody>
        
              <tr style="">
                <td style="padding: 8px 12px; max-width: 280px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" title="Stratégiai workshop">Stratégiai workshop</td>
                <td style="padding: 8px 12px; text-align: right;">2</td>
                <td style="padding: 8px 12px;">nap</td>
                <td style="padding: 8px 12px; text-align: right;">120 000 Ft</td>
                <td style="padding: 8px 12px; text-align: right;">27</td>
                <td style="padding: 8px 12px; text-align: right;">240 000 Ft</td>
              </tr>
            
              <tr style="background-color: #fafbff;">
                <td style="padding: 8px 12px; max-width: 280px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" title="Digitális prototípus">Digitális prototípus</td>
                <td style="padding: 8px 12px; text-align: right;">1</td>
                <td style="padding: 8px 12px;">projekt</td>
                <td style="padding: 8px 12px; text-align: right;">450 000 Ft</td>
                <td style="padding: 8px 12px; text-align: right;">27</td>
                <td style="padding: 8px 12px; text-align: right;">450 000 Ft</td>
              </tr>
            
              <tr style="">
                <td style="padding: 8px 12px; max-width: 280px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" title="Támogatás">Támogatás</td>
                <td style="padding: 8px 12px; text-align: right;">6</td>
                <td style="padding: 8px 12px;">hónap</td>
                <td style="padding: 8px 12px; text-align: right;">75 000 Ft</td>
                <td style="padding: 8px 12px; text-align: right;">27</td>
                <td style="padding: 8px 12px; text-align: right;">450 000 Ft</td>
              </tr>
            
      </tbody>
      <tfoot>
        <tr style="background-color: #e6efff; font-weight: 600;">
          <td style="padding: 10px 12px;" colspan="5">Nettó összesen</td>
          <td style="padding: 10px 12px; text-align: right;">1 140 000 Ft</td>
        </tr>
        <tr style="background-color: #eef3ff; font-weight: 600;">
          <td style="padding: 10px 12px;" colspan="5">ÁFA</td>
          <td style="padding: 10px 12px; text-align: right;">307 800 Ft</td>
        </tr>
        <tr style="background-color: #dbe7ff; font-weight: 700;">
          <td style="padding: 12px 12px;" colspan="5">Bruttó összesen</td>
          <td style="padding: 12px 12px; text-align: right;">1 447 800 Ft</td>
        </tr>
      </tfoot>
    </table>
  
        </section>
          </div>

        <footer class="offer-doc__footer"></footer>
  
      </article>
    </main>
</body>
</html>"
`;
